--- a/Alpha/AlphaMvc/Content/editable/addrowstyle.css
+++ b/Alpha/AlphaMvc/Content/editable/addrowstyle.css
@@ -282,6 +282,9 @@
     table td .text-size50 {
             width: 50px;
         }
+    table td .text-size60 {
+            width: 60px;
+        }
     table td .text-size80 {
             width:80px;
         }
