--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -1,4 +1,9 @@
-﻿.topictable{
+﻿input[type=date]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    display: none;
+}
+
+.topictable{
     margin-top: 10px;
     margin-left: 10px;
     color: white;
